--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "seanhayes-com/laravel-hcaptcha": "^1.2"
+        "seanhayes-com/laravel-hcaptcha": "^1.2",
+      "ext-http": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
