--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,18 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-json": "*",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "guzzlehttp/psr7": "1.*",
         "irazasyed/telegram-bot-sdk": "3.4.1",
         "laravel/framework": "^8.54",
+        "laravel/passport": "^10.2",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "seanhayes-com/laravel-hcaptcha": "^1.2"
+        "seanhayes-com/laravel-hcaptcha": "^1.2",
+        "ext-http": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
