--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,10 @@
         "guzzlehttp/psr7": "1.*",
         "irazasyed/telegram-bot-sdk": "3.4.1",
         "laravel/framework": "^8.54",
-        "laravel/passport": "^10.2",
-        "laravel/sanctum": "^2.11",
+        "laravel/sanctum": "^2.13",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "seanhayes-com/laravel-hcaptcha": "^1.2",
-        "ext-http": "*"
+        "seanhayes-com/laravel-hcaptcha": "^1.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
