--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "seanhayes-com/laravel-hcaptcha": "^1.2",
-      "ext-mysql_xdevapi": "*"
+      "ext-mysql_xdevapi": "*",
+        "ext-openssl": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
