--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-json": "*",
+        "ext-openssl": "*",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "guzzlehttp/psr7": "1.*",
@@ -15,9 +16,8 @@
         "laravel/sanctum": "^2.13",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "seanhayes-com/laravel-hcaptcha": "^1.2",
-      "ext-mysql_xdevapi": "*",
-        "ext-openssl": "*"
+        "rakutentech/laravel-request-docs": "^1.5",
+        "seanhayes-com/laravel-hcaptcha": "^1.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
